--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Flask==2.3.0
 requests==2.28.1
 pandas==2.0.2
-openmeteo-requests==1.0.0
+openmeteo-sdk==<desired_version>
 requests_cache==1.0.0
 retry-requests==1.0.0
 flask_cors==5.0.0
