--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 Flask==2.3.0
 requests==2.28.1
 pandas==2.0.2
-openmeteo-sdk==1.3.0
 requests_cache==1.0.0
 retry-requests==1.0.0
 flask_cors==5.0.0
 pytest==7.3.1
 numpy==1.24.3
 openmeteo_requests
+openmeteo-sdk
